# SwarmBridge-Multi-Actor-Swarm-Imitation-Learning-Architecture

./: .gitignore  ACADEMIC_UNIQUENESS_SUMMARY.md  CONTRIBUTING.md  FUNCTIONALITY_REPORT.md  LICENSE  README.md  RESEARCH_ROADMAP.md  SECURITY.md  demo_functionality.py  pyproject.toml  requirements.txt  swarmbridge_demo.py
.github/workflows/: ci.yml
docs/: ADVANCED_MULTI_ACTOR.md  ARCHITECTURE.md  EDGE_PLATFORM_INTEGRATION.md  PRODUCTION_IMPLEMENTATION.md  RELATIONSHIP_TO_DYNAMICAL.md  RUNBOOK.md  SWARMBRIDGE_REFACTORED.md  THREAT_MODEL.md  TRI_SYSTEM_INTEGRATION.md
examples/research/: demo_causal_discovery.py
infra/docker/: Dockerfile.ml  Dockerfile.registry  Dockerfile.ros2  Dockerfile.swarm  docker-compose.dev.yml  ros2_entrypoint.sh
infra/monitoring/: prometheus.yml
integrations/: README.md  __init__.py
integrations/edge_platform/: __init__.py
integrations/edge_platform/adapters/: __init__.py  csa_to_moe.py
integrations/edge_platform/bridges/: __init__.py  api_bridge.py  encryption_bridge.py
integrations/edge_platform/config/: __init__.py  integration_config.py
integrations/edge_platform/converters/: __init__.py  data_converters.py
integrations/edge_platform/sync/: __init__.py  federated_sync.py
integrations/swarmbrain/: __init__.py
integrations/swarmbrain/adapters/: __init__.py  csa_to_swarmbrain.py
integrations/swarmbrain/orchestration/: __init__.py  mission_bridge.py
integrations/tri_system/: __init__.py
integrations/tri_system/config/: __init__.py  tri_system_config.py
integrations/tri_system/coordinator/: __init__.py  unified_coordinator.py
integrations/tri_system/encryption/: __init__.py  unified_encryption.py
ml/: __init__.py
ml/artifact/: __init__.py  packager.py  schema.py  signing.py  validator.py
ml/datasets/: __init__.py  multi_actor_dataset.py
ml/training/: __init__.py  advanced_multi_actor.py  config.py  models.py  train_advanced_multi_actor.py  train_cooperative_bc.py
ros2_ws/src/swarm_capture/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_capture/src/: camera_capture_node.cpp
services/: __init__.py
services/registry/: __init__.py  database.py  main.py  models.py
swarm/: __init__.py
swarm/openfl/: __init__.py  aggregator.py  coordinator.py
swarm/privacy/: __init__.py  dp_sgd.py  engine.py  he_wrapper.py  ldp.py
swarm/unlearning/: __init__.py  unlearner.py
swarmbridge/: __init__.py
swarmbridge/adapters/: __init__.py  federated_adapter.py  federated_adapter_flower.py  registry_adapter.py  runtime_adapter.py
swarmbridge/integrations/: dynamical.py
swarmbridge/pipeline/: __init__.py  capture.py  processing.py
swarmbridge/research/: __init__.py  causal_coordination_discovery.py
swarmbridge/schemas/: __init__.py  cooperative_skill_artifact.py  coordination_primitives.py  role_schema.py
swarmbridge/training/: cooperative_bc_trainer.py
tests/: __init__.py
tests/integration/: test_csa_workflow.py  test_edge_platform_integration.py  test_tri_system_integration.py
tests/unit/: test_advanced_multi_actor.py  test_aggregation.py  test_causal_coordination_discovery.py  test_csa_schema.py  test_privacy.py  test_production_components.py
