[project]
name = "dynamical-sil"
version = "0.1.0"
description = "Privacy-Preserving Multi-Actor Swarm Imitation Learning"
authors = [
    {name = "Dynamical-SIL Contributors"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # Imitation Learning
    "robomimic>=0.3.0",
    "lerobot>=0.1.0",
    "gymnasium>=0.28.0",

    # Federated Learning
    "openfl>=1.5.0",
    "opacus>=1.4.0",

    # Privacy
    "Pyfhel>=3.4.0",
    "crypten>=0.4.0",

    # Computer Vision
    "mmpose>=1.1.0",
    "mmdet>=3.1.0",
    "mmcv>=2.0.0",
    "opencv-python>=4.8.0",

    # Camera & Streaming
    "onvif-zeep>=0.2.12",
    "av>=10.0.0",

    # Backend Services
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.17.0",

    # Data handling
    "h5py>=3.9.0",
    "zarr>=2.16.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",

    # Utilities
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.280",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

cuda = [
    "torch>=2.0.0+cu118",
]

fate = [
    "fate-client>=1.11.0",
    "fate-flow>=1.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*", "swarm*", "services*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "robomimic.*",
    "lerobot.*",
    "openfl.*",
    "opacus.*",
    "Pyfhel.*",
    "crypten.*",
    "mmpose.*",
    "mmdet.*",
    "onvif.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hil: marks tests requiring hardware-in-the-loop",
]
